First Test Bunch of bug fixes and added features!